include header.html

--- a/myblog/templates/header.html
+++ b/myblog/templates/header.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container rounded-pill bg-gradient bg-gray-300">
+        <ul class="nav nav-fill text-white">
+            <li class="nav-item"><a href="#" class="nav-link">首頁</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">標籤</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">個人簡介</a></li>
+            <li class="nav-item"><a href="admin" class="nav-link">文章發布</a></li>
+        </ul>
+    </div>
 </body>
 </html>
