--- a/staticfiles/css/header.css
+++ b/staticfiles/css/header.css
@@ -1,4 +1,6 @@
 header {
-  background-color: black;
   color: white;
+  position: fixed;
+  z-index: 1000;
+  background-color: black;
 }/*# sourceMappingURL=header.css.map */
