--- a/static/css/all.css
+++ b/static/css/all.css
@@ -24,6 +24,7 @@ a {
 }
 
 header {
-  background-color: black;
   color: white;
+  position: fixed;
+  z-index: 1000;
 }/*# sourceMappingURL=all.css.map */
