--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,4 +1,5 @@
 header {
-  background-color: black;
   color: white;
+  position: fixed;
+  z-index: 1000;
 }/*# sourceMappingURL=header.css.map */
