--- a/myblog/templates/header.html
+++ b/myblog/templates/header.html
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container rounded-pill bg-gradient bg-gray-300">
-        <ul class="nav nav-fill text-white">
-            <li class="nav-item"><a href="#" class="nav-link">首頁</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">標籤</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">個人簡介</a></li>
-            <li class="nav-item"><a href="admin" class="nav-link">文章發布</a></li>
-        </ul>
-    </div>
-</body>
-</html>
+
+<div class="container rounded-pill bg-gradient bg-black mt-1">
+    <ul class="nav nav-fill text-white align-items-center">
+        <li class="nav-item"><a href="#" class="nav-link">首頁</a></li>
+        /<li class="nav-item"><a href="#" class="nav-link">標籤</a></li>
+        /<li class="nav-item"><a href="#" class="nav-link">個人簡介</a></li>
+        /<li class="nav-item"><a href="admin" class="nav-link">文章發布</a></li>
+    </ul>
+</div>
