--- a/myblog/templates/index.html
+++ b/myblog/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet"  type="text/css" href="{% static 'css/all.css' %}">
 </head>
 <body>
-    <header>
+    <header class="w-100">
         {% include 'header.html' %}
     </header>
     <main>
