--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,5 +1,8 @@
 header {
-  color: white;
   position: fixed;
   z-index: 1000;
+}
+
+.w-100 {
+  width: 100%;
 }/*# sourceMappingURL=header.css.map */
