(dOllOb) 修改requirements.txt內容

--- a/myblog/templates/header.html
+++ b/myblog/templates/header.html
@@ -1,9 +1,9 @@
 
 <div class="container rounded-pill bg-gradient bg-black mt-1">
-    <ul class="nav nav-fill text-white align-items-center">
-        <li class="nav-item"><a href="#" class="nav-link">首頁</a></li>
-        /<li class="nav-item"><a href="#" class="nav-link">標籤</a></li>
-        /<li class="nav-item"><a href="#" class="nav-link">個人簡介</a></li>
-        /<li class="nav-item"><a href="admin" class="nav-link">文章發布</a></li>
+    <ul class="nav nav-fill align-items-center">
+        <li class="nav-item"><a href="#" class="nav-link text-white">首頁</a></li>
+        /<li class="nav-item"><a href="#" class="nav-link text-white">標籤</a></li>
+        /<li class="nav-item"><a href="#" class="nav-link text-white">個人簡介</a></li>
+        /<li class="nav-item"><a href="admin" class="nav-link text-white">文章發布</a></li>
     </ul>
 </div>
