--- a/myblog/templates/index.html
+++ b/myblog/templates/index.html
@@ -15,17 +15,20 @@
         {% include 'header.html' %}
     </header>
     <main>
-        {% if posts_list %}
-        <ul>
-        {% for post in posts_list %}
-            <li><a href="#">
-                {{ post.title }}</a>
-            </li>
-        {% endfor %}
-        </ul>
-        {% else %}
-            <p>沒有文章可以顯示</p>
-        {% endif %}
+        <div  class="mt-5">
+            {% if posts_list %}
+            <ul>
+            {% for post in posts_list %}
+                <li><a href="#">
+                    {{ post.title }}</a>
+                </li>
+                <div>{{ post.Content }}</div>
+            {% endfor %}
+            </ul>
+            {% else %}
+                <p>沒有文章可以顯示</p>
+            {% endif %}
+        </div>
     </main>
     
 </body>
